force-app/main/default/objects/SWAT_Team_Member__c/SWAT_Team_Member__c.object-meta.xml
<CustomObject>
    <label>SWAT Team Member</label>
    <nameField>
        <displayFormat>STM ID-{0000}</displayFormat>
        <label>SWAT Team Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWAT Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>