force-app/main/default/objects/SWAT_Team_Member__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <formula>Member_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Address</label>
    <type>Text</type>
</CustomField>