force-app/main/default/objects/SWAT_Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SLT</fullName>
            </value>
            <value>
                <fullName>Category Lead</fullName>
            </value>
            <value>
                <fullName>CG Lead</fullName>
            </value>
            <value>
                <fullName>WPS Lead</fullName>
            </value>
            <value>
                <fullName>Customer Team</fullName>
            </value>
            <value>
                <fullName>Marcoms</fullName>
            </value>
            <value>
                <fullName>CXD Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>