force-app/main/default/objects/SWAT_Team_Member__c/fields/SWAT_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>SWAT_Team_Name__c</fullName>
    <label>SWAT Team Name</label>
    <referenceTo>SWAT__c</referenceTo>
    <relationshipLabel>SWAT Team Members</relationshipLabel>
    <relationshipName>SWAT_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>